--- a/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio3/app/src/main/res/layout/activity_main.xml
+++ b/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio3/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="412dp"
-        android:layout_height="67dp"
+        android:layout_width="411dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="1dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,46 +19,126 @@
 
         <TextView
             android:id="@+id/tv_titulo"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="@font/aclonica"
+            android:fontFamily="@font/abril_fatface"
             android:text="@string/tv_titulo"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="#2196F3"
-            android:textSize="24sp"
-            android:textStyle="bold|italic" />
+            android:textSize="24sp" />
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="412dp"
-        android:layout_height="611dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:layout_editor_absoluteX="-1dp">
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="209dp"
+        android:layout_height="371dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="288dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <RadioGroup
             android:layout_width="match_parent"
-            android:layout_height="365dp" >
+            android:layout_height="wrap_content">
 
             <RadioButton
-                android:id="@+id/radioButton"
-                android:layout_width="136dp"
-                android:layout_height="wrap_content"
-                android:text="RadioButton" />
-
-            <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/rbt_tabla1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="RadioButton" />
+                android:text="@string/rbt_tabla1" />
 
             <RadioButton
-                android:id="@+id/radioButton3"
+                android:id="@+id/rbt_tabla2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="RadioButton" />
+                android:text="@string/rbt_tabla2" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla3" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla4" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla5" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla6" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla7" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla8" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla9" />
+
+            <RadioButton
+                android:id="@+id/rbt_tabla10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rbt_tabla10" />
         </RadioGroup>
-    </FrameLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="201dp"
+        android:layout_height="371dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="288dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="412dp"
+        android:layout_height="287dp"
+        android:layout_marginTop="1dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <Button
+            android:id="@+id/btn_mostrarResultado"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="mostrarResultado"
+            android:text="@string/btn_mostrarResultado" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
