--- a/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio4/app/src/main/res/layout/activity_main.xml
+++ b/Programacion Multimedia/Tareas Entregar/Tema 2/Ejercicio4/app/src/main/res/layout/activity_main.xml
@@ -7,155 +7,201 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/tv_pantalla"
+    <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="413dp"
-        android:layout_height="380dp"
-        android:text="@string/tv_pantalla"
+        android:layout_height="59dp"
+        android:layout_marginTop="309dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="91dp" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tvResultados"
+            android:layout_width="387dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="17dp"
+            android:text="@string/tvResultados"
+            android:textColor="#000000"
+            android:textSize="34sp" />
+    </FrameLayout>
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="377dp"
-        android:layout_height="255dp"
-        android:layout_marginStart="1dp"
+        android:layout_width="395dp"
+        android:layout_height="351dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btn7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:onClick="boton7"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn7" />
 
             <Button
                 android:id="@+id/btn8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton8"
+                android:layout_width="30dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn8" />
 
             <Button
                 android:id="@+id/btn9"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton9"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn9" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnSumar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/btnsignos"
+                android:text="@string/btnSumar" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btn4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton4"
+                android:layout_width="71dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn4" />
 
             <Button
                 android:id="@+id/btn5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton5"
+                android:layout_width="44dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn5" />
 
             <Button
                 android:id="@+id/btn6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton6"
+                android:layout_width="70dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn6" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btnRestar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnsignos"
+                android:text="@string/btnRestar" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btn1"
-                android:layout_width="141dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton1"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn1" />
 
             <Button
                 android:id="@+id/btn2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton2"
+                android:layout_width="39dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn2" />
 
             <Button
                 android:id="@+id/btn3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="boton3"
+                android:layout_width="64dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn3" />
 
             <Button
-                android:id="@+id/button12"
+                android:id="@+id/btnMultiplicar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnsignos"
+                android:text="@string/btnMultiplicar" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btn0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnredondo"
+                android:onClick="botonPulsado"
                 android:text="@string/btn0" />
 
             <Button
-                android:id="@+id/button14"
+                android:id="@+id/btnIgual"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnsignos"
+                android:text="@string/btnIgual" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btnDividir"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/btnsignos"
+                android:text="@string/btnDividir" />
 
         </TableRow>
-
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
